Estilos parar el icono de cerrado añadidos

--- a/css/index.css
+++ b/css/index.css
@@ -74,8 +74,14 @@
 }
 
 .closeable {
+    cursor: pointer;
     margin-left: 5px;
     color: white;
+}
+
+.closeable:hover{
+    color: black;
+    transition: 0.5s all;
 }
 
 .buttonGroup {
